[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/diamond/diamond.fbx" type="PackedScene" id=1]
[ext_resource path="res://assets/diamond/lambert1.material" type="Material" id=2]
[ext_resource path="res://scripts/Diamond.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]

[node name="Diamond" instance=ExtResource( 1 )]
transform = Transform( 100, 0, 0, 0, -100, 1.50996e-05, 0, -1.50996e-05, -100, -4.35924, -1.29618, -1.8011 )
script = ExtResource( 3 )

[node name="pCone2" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.043662, -0.00718044, -0.0177871 )
material/0 = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="1"]
wait_time = 7.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="." index="2"]
wait_time = 5.2
one_shot = true
autostart = true

[node name="Area" type="Area" parent="." index="3"]

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
transform = Transform( 0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0.0439828, -0.0155675, -0.0189718 )
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
